Bug 110760 - directory listings shouldn't reuly on libappcomps. Also fixes bug 102826 & related issues. r=dougt, sr=darin